# OpenUtilities

./: CMakeLists.txt  OpenUtilities.sln  build.sh
.github/workflows/: mac.yml
OpenUtilities/: CMakeLists.txt  OpenUtilities.vcxproj  OpenUtilities.vcxproj.filters  dllmain.cpp  utilities.cpp  utilities.h
